# Meeting-assistant

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.codex/: ai_instructions.md  project.md
apps/macos/MeetingAssistantMac/: Package.swift  README.md
crates/meeting_core/: Cargo.toml
crates/meeting_core/src/: lib.rs
crates/meeting_core_ffi/: Cargo.toml
crates/meeting_core_ffi/include/: meeting_core_ffi.h
crates/meeting_core_ffi/src/: lib.rs
scripts/macos/: build_dmg.sh  build_iconset.sh  build_rust_ffi.sh  generate_app_icon.py  open_in_xcode.sh  xcode_build.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: attachment.rs  events.rs  lib.rs  models.rs
src-tauri/src/asr/: aliyun_tingwu_client.rs  deepgram_client.rs  mod.rs  provider.rs
src-tauri/src/audio/: loopback_stub.rs  mic_capture.rs  mod.rs
src-tauri/src/llm/: claude_client.rs  mod.rs  openai_client.rs
src-tauri/src/secrets/: keychain.rs  mod.rs
src-tauri/src/session/: live_session.rs  mod.rs
src-tauri/src/storage/: json_repo.rs  mod.rs  schema.rs
src-tauri/src/window/: mode.rs
src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx  switch.tsx  textarea.tsx
src/features/live/: HintPanel.tsx  SessionToolbar.tsx  TranscriptList.tsx  live-store.ts  useQuestionTrigger.ts
src/features/live-overlay/: LiveOverlayApp.tsx
src/features/onboarding/: OnboardingWizard.tsx
src/i18n/: messages.ts  provider.tsx
src/lib/: tauri-ipc.ts
src/types/: ipc-types.ts
(+30 files in other folders)
