[package]
name = "meeting-assistant"
version = "0.1.0"
description = "A lightweight cross-platform meeting assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "meeting_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
dirs = "6"
futures-util = "0.3"
hmac = "0.12"
keyring = "3"
md5 = "0.7"
pdf-extract = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
uuid = { version = "1", features = ["v4", "serde"] }
